Fix figcaption wrapping on mobile / narrow screens

--- a/src/themes/mosstech/static/css/style.css
+++ b/src/themes/mosstech/static/css/style.css
@@ -1374,13 +1374,13 @@ body.is-menu-visible #wrapper {
 }
 
 .post-content figcaption h4 {
-    padding-top: 1rem;
     text-align: center;
     font-size: 0.7rem;
-    letter-spacing: 0.25rem;
-    margin-top: 0.5rem;
+    letter-spacing: 0.15rem;
+    line-height: 1.2rem;
     text-transform: uppercase;
-    white-space: nowrap;
+    padding-top: 0.7rem;
+    margin-top: 0.7rem;
 }
 
 .post-content ol {
